--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,7 +26,7 @@ section#telefone {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* quadrado azul no centro da tela */
+    transform: translate(-50%, -50%); /* imagem no centro da tela */
 
     height: 627px;
     width: 311px;
@@ -37,7 +37,7 @@ iframe#tela {
     position: relative;
     top: 80px;
     left: 22px;
-    width: 269px;
+    width: 267px;
     height: 471px;
 }
 
@@ -58,5 +58,5 @@ section#redes-sociais img:hover {
     border: 2px solid rgba(255, 255, 255, 0.614);
     transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.611);
-    transition: transform 0.5s, border 1s;
+    transition: transform 0.3s, border 1s;
 }
